Removed margin-left and margin-right value of btn class in style.css to fix the issue of button displaying correctly on small screen device as this property value resulted buttons display as a block element on small decices however expected outcome was inline display , also documented this on issue and resolution section of README.md.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,11 +187,9 @@ body{
     border: none;
     border-radius: 2px;
     outline: none;
-    cursor: pointer;
+    cursor: pointer; 
     text-align: center;
     padding-top: 0.85em;
-    margin-right: 50%;
-    margin-left: 50%;  
 }
 
 .allButton{
